--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Verveware - Home Care Agency Management Software</title>
+
+        <!-- CSS only -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF"
+            crossorigin="anonymous"
+        />
+        <!-- JavaScript Bundle with Popper 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+    -->
+        <link rel="stylesheet" href="css/styles.css" />
     </head>
-    <body></body>
+    <body>
+        <div class="container">
+            <div class="row">
+                <div id="verve-header">
+                    <img
+                        src="./images/Verveware logo.png"
+                        alt="Verveware logo"
+                    />
+                </div>
+                <h1>Test</h1>
+            </div>
+        </div>
+    </body>
 </html>
