Finished most of the landing page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
-        <div class="container">
+        <main class="container">
             <div class="row">
                 <div id="verve-header">
                     <img
@@ -27,8 +27,49 @@
                         alt="Verveware logo"
                     />
                 </div>
-                <h1>Test</h1>
-            </div>
-        </div>
+                <!-- 
+                    Hero banner
+                 -->
+                <div class="row flex-lg-row align-items-center hero p-5">
+                    <div class="col-10 col-sm-8 col-lg-6">
+                        <img
+                            src="./images/team-dev-website.png"
+                            class="d-block mx-lg-auto img-fluid"
+                            alt="Surface Pro 8"
+                            width="700"
+                            height="500"
+                            loading="lazy"
+                        />
+                    </div>
+                    <div class="col-lg-6 my-5 px-5">
+                        <h5>
+                            Built by Home Care Providers for Home Care Providers
+                        </h5>
+                        <p class="lead">
+                            Most Home Care platforms are converted from medical
+                            use. <span class="bold">Vervecare</span> is different. 
+                            <span class="bold">Vervecare</span> has been
+                            built from the ground up with the unique needs of
+                            Homecare providers in mind.
+                        </p>
+                        <p class="lead">
+                            From Electronic Visit Verification to submitting
+                            claims to the State and MCOs we only focus on the
+                            day-to-day operations of Home Care Agency Providers.
+                        </p>
+                        <p class="lead">
+                            We are at the beginning of start-up journey and
+                            would love your input.
+                        </p>
+                        <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+                            <div class="input-group">
+                                <input type="text" class="form-control" placeholder="Sign up for more information">
+                                <button class="btn btn-primary" type="button">Submit</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+  
+        </main>
     </body>
 </html>
