Made some minor text changes

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                         </p>
                         <p class="lead">
                             From Electronic Visit Verification to submitting
-                            claims to the State and MCOs we only focus on the
+                            claims to the State and MCOs, we only focus on the
                             day-to-day operations of Home Care Agency Providers.
                         </p>
                         <p class="lead">
-                            We are at the beginning of start-up journey and
+                            We are at the beginning of our start-up journey and
                             would love your input.
                         </p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
