--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             use. <span class="bold">Vervecare</span> is different. 
                             <span class="bold">Vervecare</span> has been
                             built from the ground up with the unique needs of
-                            Home Care providers in mind.
+                            Home Care Providers in mind.
                         </p>
                         <p class="lead">
                             From Electronic Visit Verification to submitting
