More minor text changes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <p class="lead">
                             From Electronic Visit Verification to submitting
                             claims to the State and MCOs, we only focus on the
-                            day-to-day operations of Home Care Agency Providers.
+                            day-to-day operations of Home Care Agencies.
                         </p>
                         <p class="lead">
                             We are at the beginning of our start-up journey and
@@ -63,7 +63,7 @@
                         </p>
                         <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                             <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Sign up for more information">
+                                <input type="email" class="form-control" placeholder="Enter your email address more information">
                                 <button class="btn btn-primary" type="button">Submit</button>
                             </div>
                         </div>
