Changed the logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div id="verve-header">
                     <img
-                        src="./images/Verveware logo.png"
+                        src="./images/logo.png"
                         alt="Verveware logo"
                     />
                 </div>
